<resources>
    <string name="app_name">LinklineTest</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="button_login_text">войти</string>
    <string name="email_field_hint">email</string>
    <string name="password_field_hint">password</string>
    <string name="create_lamp_button">LAMP</string>
    <string name="create_heating_button">HEATING</string>
    <string name="create_socket_button">SOCKET</string>
    <string name="room_name_field_hint">имя</string>
    <string name="device_switch_text_on">вкл</string>
    <string name="device_switch_text_off">выкл</string>
    <string name="delete_button_text">Удалить</string>
</resources>
