<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_light_bulb"/>

        <Button
            android:id="@+id/lamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_lamp_button"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_radiator"/>

        <Button
            android:id="@+id/heat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_heating_button"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_socket"/>

        <Button
            android:id="@+id/socket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_socket_button"
            android:layout_gravity="center"/>
    </LinearLayout>



</LinearLayout>